[gd_scene load_steps=7 format=2]

[ext_resource path="res://Enemy/Guard2.gd" type="Script" id=1]
[ext_resource path="res://Assets/GFX/PNG/Soldier 1/soldier1_stand.png" type="Texture" id=2]
[ext_resource path="res://LightMaps/Torch.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape2D" id=1]

[sub_resource type="OccluderPolygon2D" id=2]
polygon = PoolVector2Array( -9, -17, -3, -21, 3, -20, 8, -15, 9, 13, 3, 21, -5, 19, -10, 12, -11, -13 )

[sub_resource type="CircleShape2D" id=3]
radius = 355.0

[node name="Guard" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 0 )
shape = SubResource( 1 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
visible = false
light_mask = 0
occluder = SubResource( 2 )
light_mask = 0

[node name="Torch" parent="." instance=ExtResource( 3 )]
scale = Vector2( 0.5, 0.75 )
offset = Vector2( 340, 0 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="DetectionRange" type="Area2D" parent="."]
collision_layer = 4

[node name="DetectionShape" type="CollisionShape2D" parent="DetectionRange"]
shape = SubResource( 3 )

[connection signal="visibility_changed" from="Torch" to="." method="_on_Torch_visibility_changed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_shape_entered" from="DetectionRange" to="." method="_on_DetectionRange_area_shape_entered"]
